<resources>
    <string name="app_name">MIO tools</string>
    <string name="kConnection">Connection</string>
    <string name="kFeature">Feature</string>
    <string name="kSettings">Settings</string>
    <string name="kChannel">Channel</string>
    <string name="kWifi">Wifi</string>
    <string name="kSet">Configure</string>
    <string name="kDisConnect">DisConnect</string>
    <string name="kSearch">Search</string>
    <string name="kConnected">Connected</string>
    <string name="kVersion">Current Version:</string>
    <string name="kConnectionWifi">Please Connect WIFI,As:HE... </string>
    <string name="Instructions">AAP Function Introduction</string>
    <string name="kRealData">RealData</string>
    <string name="kSetPN">ConfigurePN</string>
    <string name="kRename">Rename</string>
    <string name="kVersionManage">Version Manage</string>
    <string name="kDeviceOperation">Device Operation</string>
    <string name="kCheckTime">Check Time</string>
    <string name="kDeviceManage">Meter Records Management</string>
    <string name="WIFIset">WiFi Settings</string>
    <string name="GPSset">GPS Settings</string>
    <string name="DataManagement">Management Data</string>
    <string name="getGPS">Refresh Terminal Location</string>
    <string name="GPSlocation">Location of Current Position</string>
    <string name="kReset">Reset</string>
    <string name="kLocalUpdate">Local Upgrade</string>
    <string name="kTerminalInfo">Terminal Status Information</string>
    <string name="kTerminalVersionInfo">Terminal Version</string>
    <string name="TerminalCentralizedMeterStatInfo">Centralized Meter Reading Terminal Status Information</string>
    <string name="kTerminalState">Terminal State</string>
    <string name="DeviceDocumentManage">Device Document Manage</string>
    <string name="NewPowerIndication">The Current Positive Active Energy Indication</string>
    <string name="ForwardActivePower">Day Freeze Frame Data</string>
    <string name="PointBitmap">Effective Measurement Bitmap</string>
    <string name="meterInfo">Meter Information</string>
    <string name="metermgn">Meter Management</string>
    <string name="TransformerMonitoring">Transformer Monitoring Terminal State Input Parameters</string>
    <string name="TermianalEle">Terminal Capacity At the End of</string>
    <string name="kConfirmReset">Confirm the Reset?</string>
    <string name="kResetData">Initialized Data Area</string>
    <string name="kResetDevice">Hardware Initialization</string>
    <string name="kResetAll">Parameters (in Addition to the Master Station Communication System Related) and Initialize the Whole Data Area</string>
    <string name="kManufacturer">Manufactory Code</string>
    <string name="kDeviceCode">Equipment Serial No</string>
    <string name="kSoftWareVersion">Version of Software Terminal </string>
    <string name="kDeviceSoftWareDate">Issue Date of Software Terminal </string>
    <string name="kDeviceCapacity">Issue Date of Software Terminal</string>
    <string name="kDeviceProtocolVersion">Terminal Communication Protocol Version</string>
    <string name="kDeviceHardWareVersion">Version of Hardware Terminal</string>
    <string name="kDeviceHardWareDate">Issue Date of Hardware Terminal</string>
    <string name="kCommunicationModuleSoftWareVersion">Downlink Communication Module Internal Test Software Version</string>
    <string name="kRemoteSwitchOff">Remote Trip</string>
    <string name="kAllowSwitchOn">Allow Closing</string>
    <string name="kRemoteSwitchOn">Remote Close</string>
    <string name="kBreakerState">Breaker Switch Status</string>
    <string name="OperationRlue1">1)Time Limit Power: the Value Range 0 to 15 Unit: 0.5h (half an hour), it is 0, Indicating That the Emergency Power Rationing, Brownouts That is a Long Time, no Automatic Lifting of Restrictions on State Power; is not 0, Press set Time Limit Power Brownouts.</string>
    <string name="OperationRlue2">2)Alarm Delay Time: the Value Range 0 to 15 Unit: min, when "0" Indicates an Immediate Trip; not zero, Press the Alarm set Time an Alarm.</string>
    <string name="OperationRlue3">1)Alarm Delay Time: the Value Range 0 to 15 Unit: min, is "0", it Indicates Immediately Closing; is not 0, Press the Alarm set Time an Alarm.</string>
    <string name="kDeviceTime">Device Time</string>
    <string name="kEditCheckTime">Edit Checking the Time</string>
    <string name="kSIMState">Status :</string>
    <string name="kSIM">SIM Card Authentication</string>
    <string name="kSIMNoAuthentication">Un Certified</string>
    <string name="kSIMNoFaction">This Feature is not Supported</string>
    <string name="kSIMAuthentication">Authenticate</string>
    <string name="kSIMAuthenticationHas">Vertified</string>
    <string name="kSIMphone">Cellphone Number :</string>
    <string name="kSIMInfo">Certifcation Information :</string>
    <string name="kSIMAuthing">Perform Authentication</string>
    <string name="kSIMUsernum">Get Verification Code</string>
    <string name="kSIMUsernum1">Security Code : </string>
    <string name="kSIMSucceed">Authentication is Successful</string>
    <string name="kSIMFail">Verification Failed</string>
    <string name="kSIMTime">Wait:</string>
    <string name="kSIMinputPhone">Please Enter the Number</string>
    <string name="kSIMVerification">Please Input Identifying Code</string>
    <string name="kSIMSendMsg">[HEXING] SIM Card Verification Code is:</string>
    <string name="kLongitude">Longitude :</string>
    <string name="kLatitude">Latitude :</string>
    <string name="WIFIname">WiFi Name</string>
    <string name="setWIFI">WiFi Settings</string>
    <string name="setWIFIname">Set up WiFi Name</string>
    <string name="WIFIpassword">Set up WiFi Password</string>
    <string name="oldpassword">Input Original Password</string>
    <string name="newpassword">Input new Password</string>
    <string name="newpassword2">Confirm new Password</string>
    <string name="setIP">Ip Settings</string>
    <string name="mainIP">Master Station IP</string>
    <string name="mainIPset">Set up Master Station IP</string>
    <string name="terminalIP">Terminal IP</string>
    <string name="terminalIPset">Set up Terminal IP</string>
    <string name="agentIp">Proxy Address</string>
    <string name="MainIPaddress">Primary IP Address</string>
    <string name="AlternateIPaddress">Alternate IP Address</string>
    <string name="MianIPPort">Port</string>
    <string name="Subnetmask">Subnet Mask</string>
    <string name="Gateway">Gateway</string>
    <string name="Proxyservertype">Proxy Type</string>
    <string name="Proxyserveraddress">Proxy Address</string>
    <string name="Proxyserverconnectionmode">Proxy Connection</string>
    <string name="UserName">Username</string>
    <string name="Password">Password</string>
    <string name="Terminallistenerport">Listening Port Terminal</string>
    <string name="IPaddress">IP Address</string>
    <string name="kSelectFile">Select a Document</string>
    <string name="kNoFile">No Upgrade File</string>
    <string name="kTerminalVersion">Terminal Version</string>
    <string name="kLatestVersion">Latest Version</string>
    <string name="kNewVersion">New Version</string>
    <string name="kClient">HXEJ200Client</string>
    <string name="kUpgrade">Upgrade......</string>
    <string name="kTransmit">Transmitting Data</string>
    <string name="kUpdateInfo">Update Information</string>
    <string name="kLater">Later</string>
    <string name="kUpdateImmediately">new</string>
    <string name="kNoUpdate">No Update</string>
    <string name="kStateFlag">State Quantity Attribute Flags</string>
    <string name="kPhysicalQuantityType">Corresponding to the Physical Type</string>
    <string name="kWifiFilter">Wifi Filter</string>
    <string name="kUpdate">Update</string>
    <string name="kTimeoutSetting">Timeout Settings</string>
    <string name="kSecond">S</string>
    <string name="kCheckUpdateTip">Verify That the Network Connection is Available Before Check for Updates Reset</string>
    <string name="kDefault">Reset</string>
    <string name="kCheckUpdate">Check for Updates</string>
    <string name="kServerAddress">Server Address</string>
    <string name="kCheckTimeInvalid">Time Format is not Correct, Enter the Correct Time, such as:1970/01/01 08:00:00</string>
    <string name="kSetIpInvalid">Data Format is Incorrect, Enter the Correct Format, Such as:192.168.0.0,或192.168.0.0.1</string>
    <string name="kSetGps">Data Format is Incorrect, Enter the Correct Format, such as:04:1122.3344</string>
    <string name="kCancel">Cancel</string>
    <string name="kOk">Determine</string>
    <string name="kTip">Prompt</string>
    <string name="kKwAll"> Current Total Active Power</string>
    <string name="kKwA"> Current A phase Active Power</string>
    <string name="kKwB"> Current B phase Active Power</string>
    <string name="kKwC"> Current C phase Active Power</string>
    <string name="kKvarAll"> Current Total Reactive Power</string>
    <string name="kKvarA"> Current A Phase Reactive Power</string>
    <string name="kKvarB"> Current B Phase Reactive Power</string>
    <string name="kKvarC"> Current C Phase Reactive Powe</string>
    <string name="kFactorAll"> Current Total Power Factor</string>
    <string name="kFactorA">Current A Phase Power Factor</string>
    <string name="kFactorB">Current B Phase Power Factor</string>
    <string name="kFactorC">Current C Phase Power Factor</string>
    <string name="kKvaAll"> Current Total Apparent Power</string>
    <string name="kKvaA">The Current A Phase Apparent Power</string>
    <string name="kKvaB">The Current B Phase Apparent Power</string>
    <string name="kKvaC">The Current C Phase Apparent Power</string>
    <string name="kIA"> Current A Phase  Current</string>
    <string name="kIB">Current B Phase  Current</string>
    <string name="kIC">Current C Phase  Current</string>
    <string name="kIZero"> Current zero Sequence Current</string>
    <string name="kUA"> Current A Phase Voltage</string>
    <string name="kUB"> Current B Phase Voltage</string>
    <string name="kUC"> Current C Phase Voltage</string>
    <string name="Query">Inquire</string>
    <string name="AddMeter">New Meter</string>
    <string name="kMeterNum">The Remaining Number of Measurement Points:</string>
    <string name="kMeterNum2">Measuring Point Number:</string>
    <string name="kMeterDel">Delete this Table</string>
    <string name="TimeFormart">Such as:20160819</string>
    <string name="MeterId">Meter No</string>
    <string name="MeterPn">Mersuring Point Number</string>
    <string name="MeterType">Type</string>
    <string name="MeterUpdate">Update List</string>
    <string name="MeterState">Reading Status</string>
    <string name="MeterDetails">Detail</string>
    <string name="ManageData">Data Management</string>
    <string name="SaveData">Save Data</string>
    <string name="ExportRealData">Exporter Real Data</string>
    <string name="ExportFrozenData">Export Daily Frozen </string>
    <string name="ClearSaveData">Clear All Data</string>
    <string name="GetTerminalFrozenData">Terminal Daily Frozen </string>
    <string name="ReadData">Read Data</string>
    <string name="ExportData">Export Data</string>
    <string name="ClearData">Clear Data</string>
</resources>