<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cn.hxgroup.www.hhu.ui.feature.PointBitmapActivity">

    <RelativeLayout
        android:id="@+id/action_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/titlebar_height"
        android:background="@color/color_titlebar_bg">

        <ImageView
            android:id="@+id/point_bitmap_back_iv"
            android:layout_width="@dimen/titlebar_height"
            android:layout_height="@dimen/titlebar_height"
            android:background="@drawable/btn_back_bg_selector"
            android:src="@drawable/back_arrow" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/metermgn"
            android:textColor="@color/color_white"
            android:textSize="@dimen/titlebar_text_size" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/point_bitmap_choice_sp1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/titlebar_height"
        android:layout_below="@id/action_bar">

        <Button
            android:id="@+id/point_bitmap_updata_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/feature_item_common_size"
            android:background="@drawable/common_btn_bg_selector"
            android:padding="5dp"
            android:text="@string/MeterUpdate"
            android:textColor="@color/color_white" />

        <TextView
            android:id="@+id/point_bitmap_total_tv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/point_bitmap_choice_sp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:paddingRight="@dimen/feature_item_vertical_space"></Spinner>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/point_bitmap_title_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/point_bitmap_choice_sp1"
        android:layout_margin="@dimen/feature_item_size"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/MeterId" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/MeterPn" />

        <TextView
            android:id="@+id/meterinfo_item_type_tv"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/MeterType" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/MeterDetails" />
    </LinearLayout>

    <com.handmark.pulltorefresh.library.PullToRefreshListView
        android:id="@+id/point_bitmap_listview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/point_bitmap_title_ll"
        android:layout_marginBottom="@dimen/titlebar_height" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/point_bitmap_add_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/feature_item_common_size"
            android:layout_weight="1"
            android:background="@drawable/common_btn_bg_selector"
            android:text="@string/AddMeter"
            android:textColor="@color/color_white" />

        <Button
            android:id="@+id/point_bitmap_meter_state_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/feature_item_common_size"
            android:layout_weight="1"
            android:background="@drawable/common_btn_bg_selector"
            android:text="@string/MeterState"
            android:textColor="@color/color_white" />

        <!--<Button-->
        <!--android:id="@+id/point_bitmap_meter_more_btn"-->
        <!--android:layout_width="0dp"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_margin="@dimen/feature_item_common_size"-->
        <!--android:layout_weight="1"-->
        <!--android:background="@drawable/common_btn_bg_selector"-->
        <!--android:text="@string/MeterMore"-->
        <!--android:textColor="@color/color_white" />-->
    </LinearLayout>
</RelativeLayout>
