<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="cn.hxgroup.www.hhu.ui.feature.ManageDataActivity">

    <RelativeLayout
        android:id="@+id/action_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/titlebar_height"
        android:background="@color/color_titlebar_bg">

        <ImageView
            android:id="@+id/setting_data_back_iv"
            android:layout_width="@dimen/titlebar_height"
            android:layout_height="@dimen/titlebar_height"
            android:background="@drawable/btn_back_bg_selector"
            android:src="@drawable/back_arrow" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/ManageData"
            android:textColor="@color/color_white"
            android:textSize="@dimen/titlebar_text_size" />

    </RelativeLayout>
    <!--数据读取-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:text="@string/ReadData"
        android:textColor="@color/color_common_btn_bg_normal" />


    <TextView
        android:id="@+id/setting_terminal_value_tv"
        android:layout_width="match_parent"
        android:layout_height="@dimen/feature_item_height"
        android:background="@drawable/common_item_bg_selector"
        android:drawablePadding="20dp"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/feature_item_horizontal_space"
        android:text="@string/GetTerminalFrozenData" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/color_split_line" />
    <!--数据导出-->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:text="@string/ExportData"
        android:textColor="@color/color_common_btn_bg_normal" />

    <TextView
        android:id="@+id/setting_active_value_tv"
        android:layout_width="match_parent"
        android:layout_height="@dimen/feature_item_height"
        android:background="@drawable/common_item_bg_selector"
        android:drawablePadding="20dp"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/feature_item_horizontal_space"
        android:text="@string/ExportFrozenData" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/color_split_line" />

    <TextView
        android:id="@+id/setting_realdata_tv"
        android:layout_width="match_parent"
        android:layout_height="@dimen/feature_item_height"
        android:background="@drawable/common_item_bg_selector"
        android:drawablePadding="20dp"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/feature_item_horizontal_space"
        android:text="@string/ExportRealData" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/color_split_line" />

    <!--清除数据库保存数据-->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:text="@string/ClearData"
        android:textColor="@color/color_common_btn_bg_normal" />

    <TextView
        android:id="@+id/setting_clear_data_tv"
        android:layout_width="match_parent"
        android:layout_height="@dimen/feature_item_height"
        android:background="@drawable/common_item_bg_selector"
        android:drawablePadding="20dp"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/feature_item_horizontal_space"
        android:text="@string/ClearSaveData" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/color_split_line" />
    <!---->
    <!--<TextView-->
    <!--android:id="@+id/setting_clear_meter_acdata_tv"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="@dimen/feature_item_height"-->
    <!--android:background="@drawable/common_item_bg_selector"-->
    <!--android:drawablePadding="20dp"-->
    <!--android:gravity="center_vertical"-->
    <!--android:paddingLeft="@dimen/feature_item_horizontal_space"-->
    <!--android:text="清除表计日冻结数据" />-->

    <!--<View-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="1px"-->
    <!--android:background="@color/color_split_line" />-->

    <!--<TextView-->
    <!--android:id="@+id/setting_clear_terminal_acdata_tv"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="@dimen/feature_item_height"-->
    <!--android:background="@drawable/common_item_bg_selector"-->
    <!--android:drawablePadding="20dp"-->
    <!--android:gravity="center_vertical"-->
    <!--android:paddingLeft="@dimen/feature_item_horizontal_space"-->
    <!--android:text="清除终端日冻结数据" />-->

    <!--<View-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="1px"-->
    <!--android:background="@color/color_split_line" />-->

    <!--<TextView-->
    <!--android:id="@+id/setting_clear_rldata_tv"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="@dimen/feature_item_height"-->
    <!--android:background="@drawable/common_item_bg_selector"-->
    <!--android:drawablePadding="20dp"-->
    <!--android:gravity="center_vertical"-->
    <!--android:paddingLeft="@dimen/feature_item_horizontal_space"-->
    <!--android:text="清除实时数据" />-->

    <!--<View-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="1px"-->
    <!--android:background="@color/color_split_line" />-->
</LinearLayout>
