<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cn.hxgroup.www.hhu.ui.feature.Meter2Activity">

    <RelativeLayout
        android:id="@+id/meter2_toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/titlebar_height"
        android:background="@color/color_titlebar_bg">

        <ImageView
            android:id="@+id/terminal_add_meter2_backiv"
            android:layout_width="@dimen/titlebar_height"
            android:layout_height="@dimen/titlebar_height"
            android:background="@drawable/btn_back_bg_selector"
            android:src="@drawable/back_arrow" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/AddMeter"
            android:textColor="@color/color_white"
            android:textSize="@dimen/titlebar_text_size" />

    </RelativeLayout>

    <TextView
        android:id="@+id/meter2_num"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/meter2_toolbar"
        android:layout_margin="@dimen/feature_item_size"
        android:text="@string/kMeterNum" />

    <GridView
        android:id="@+id/gridview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/meter2_num"
        android:layout_marginBottom="@dimen/titlebar_height"
        android:numColumns="5"></GridView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/feature_item_height_four"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/feature_item_size"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/meter2_pn_tv"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/feature_item_size"
            android:layout_weight="1"
            android:background="@color/color_num"
            android:gravity="center"
            android:text="@string/kMeterNum2"
            android:textColor="@color/color_white" />

        <Button
            android:id="@+id/meter2_pn_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/common_btn_bg_selector"
            android:text="@string/kOk"
            android:textColor="@color/color_white" />
    </LinearLayout>
</RelativeLayout>
