<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cn.hxgroup.www.hhu.ui.feature.MeterInfoActivity">

    <RelativeLayout
        android:id="@+id/action_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/titlebar_height"
        android:background="@color/color_titlebar_bg">

        <ImageView
            android:id="@+id/point_meterinfo_back_iv"
            android:layout_width="@dimen/titlebar_height"
            android:layout_height="@dimen/titlebar_height"
            android:background="@drawable/btn_back_bg_selector"
            android:src="@drawable/back_arrow" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/meterInfo"
            android:textColor="@color/color_white"
            android:textSize="@dimen/titlebar_text_size" />

    </RelativeLayout>

    <ListView
        android:id="@+id/meter_info_lv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/action_bar"
        android:layout_marginBottom="50dp"></ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/meterinfo_realdata_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/feature_item_common_size"
            android:layout_weight="1"
            android:background="@drawable/common_btn_bg_selector"
            android:text="@string/kRealData"
            android:textColor="@color/color_white" />

        <Button
            android:id="@+id/meterinfo_power_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/feature_item_common_size"
            android:layout_weight="1"
            android:background="@drawable/common_btn_bg_selector"
            android:text="@string/ForwardActivePower"
            android:textColor="@color/color_white" />

        <Button
            android:id="@+id/meterinfo_del_meter_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/feature_item_common_size"
            android:layout_weight="1"
            android:background="@drawable/common_btn_bg_selector"
            android:text="@string/kMeterDel"
            android:textColor="@color/color_white" />
    </LinearLayout>
</RelativeLayout>
