<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cn.hxgroup.www.hhu.ui.feature.ActivePowerValueActivity">

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/titlebar_height"
        android:background="@color/color_titlebar_bg">

        <ImageView
            android:id="@+id/active_power_value_back_iv"
            android:layout_width="@dimen/titlebar_height"
            android:layout_height="@dimen/titlebar_height"
            android:background="@drawable/btn_back_bg_selector"
            android:src="@drawable/back_arrow" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/ForwardActivePower"
            android:textColor="@color/color_white"
            android:textSize="@dimen/titlebar_text_size" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/activity_power_query"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/toolbar"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/active_power_value_time_et"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_weight="6"
            android:focusable="false"
            android:gravity="center_vertical"
            android:hint="@string/TimeFormart"
            android:textSize="16sp" />

        <Button
            android:id="@+id/active_power_value_time_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="2"
            android:background="@drawable/common_btn_bg_selector"
            android:text="@string/Query"
            android:textColor="@color/color_white" />
    </LinearLayout>

    <ListView
        android:id="@+id/active_power_value_listview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/activity_power_query"
        android:layout_marginTop="10dp"></ListView>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/color_split_line" />

    <Button
        android:id="@+id/active_value_savedata_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:background="@drawable/common_btn_bg_selector"
        android:text="@string/SaveData"
        android:textColor="@color/color_white" />
</RelativeLayout>
